--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" onclick="location.reload();">
 </button></h2>
   <p class="example2">熱中症に注意</p>
-  <font size=+2> 2020-05-18 08:05 | 32 ℃ | 76 ％|指数  32  <font color= red >■■■</font></font><br>
   <font size=+2> 2020-05-18 08:20 | 31 ℃ | 75 ％|指数  31  <font color= orange >■■■</font></font><br>
   <font size=+2> 2020-05-18 08:35 | 30 ℃ | 75 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+2> 2020-05-18 08:50 | 29 ℃ | 77 ％|指数  29  <font color= orange >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+2> 2020-05-18 14:22 | 28 ℃ | 60 ％|指数  25  <font color= green >■■■</font></font><br>
   <font size=+2> 2020-05-18 14:37 | 28 ℃ | 58 ％|指数  25  <font color= green >■■■</font></font><br>
   <font size=+2> 2020-05-18 14:52 | 28 ℃ | 55 ％|指数  25  <font color= green >■■■</font></font><br>
+  <font size=+2> 2020-05-18 15:07 | 28 ℃ | 55 ％|指数  25  <font color= green >■■■</font></font><br>
   <b>凡例　　</b> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
