--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" onclick="location.reload();">
 </button></h2>
   <p class="example2">熱中症に注意</p>
-  <font size=+2> 2020-05-18 13:37 | 27 ℃ | 75 ％|指数  27  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020-05-18 13:52 | 28 ℃ | 67 ％|指数  26  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020-05-18 14:07 | 28 ℃ | 63 ％|指数  26  <font color= yellow >■■■</font></font><br>
   <font size=+2> 2020-05-18 14:22 | 28 ℃ | 60 ％|指数  25  <font color= green >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+2> 2020-05-18 15:52 | 28 ℃ | 53 ％|指数  25  <font color= green >■■■</font></font><br>
   <font size=+2> 2020-05-18 16:07 | 28 ℃ | 53 ％|指数  25  <font color= green >■■■</font></font><br>
   <font size=+2> 2020-05-18 16:22 | 28 ℃ | 53 ％|指数  25  <font color= green >■■■</font></font><br>
+  <font size=+2> 2020-05-18 16:37 | 28 ℃ | 53 ％|指数  24  <font color= green >■■■</font></font><br>
   <b>凡例　　</b> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
