--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
   <h1>宇栄原小学校屋内運動場等<br>　　　　　改築工事（建築）</h1>
   <h2>佐平建設・正吉建設ＪＶ</h2>
 <h2><button>
-<input type = "button" value ="再読込" onclick="location.reload();">
+<input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </button></h2>
   <p class="example2">熱中症に注意</p>
-  <font size=+2> 2020-05-18 19:43 | 28 ℃ | 86 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+2> 2020-05-18 19:56 | 28 ℃ | 86 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+2> 2020-05-18 20:12 | 28 ℃ | 85 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+2> 2020-05-18 20:20 | 28 ℃ | 84 ％|指数  29  <font color= orange >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+2> 2020-05-18 21:50 | 28 ℃ | 86 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+2> 2020-05-18 22:05 | 28 ℃ | 88 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+2> 2020-05-18 22:20 | 27 ℃ | 89 ％|指数  29  <font color= orange >■■■</font></font><br>
+  <font size=+2> 2020-05-18 22:31 | 27 ℃ | 89 ％|指数  29  <font color= orange >■■■</font></font><br>
   <b>凡例　　</b> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
