--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-05-18 20:20 | 28 ℃ | 84 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-18 20:35 | 28 ℃ | 84 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-18 20:50 | 28 ℃ | 86 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-18 21:05 | 28 ℃ | 86 ％|指数  30  <font color= orange >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-05-18 22:31 | 27 ℃ | 89 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-18 22:46 | 28 ℃ | 89 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-18 23:01 | 30 ℃ | 85 ％|指数  31  <font color= orange >■■■</font></font><br>
+  <font size=+1> 2020-05-18 23:16 | 31 ℃ | 82 ％|指数  32  <font color= red >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
