--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-05-19 00:16 | 31 ℃ | 78 ％|指数  31  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-05-19 00:31 | 32 ℃ | 77 ％|指数  32  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-05-19 00:46 | 31 ℃ | 77 ％|指数  31  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-05-19 01:01 | 31 ℃ | 77 ％|指数  31  <font color= red >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-05-19 02:31 | 30 ℃ | 76 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-19 02:46 | 31 ℃ | 76 ％|指数  31  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-19 03:01 | 31 ℃ | 75 ％|指数  30  <font color= orange >■■■</font></font><br>
+  <font size=+1> 2020-05-19 03:16 | 31 ℃ | 75 ％|指数  30  <font color= orange >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
