--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-05-19 16:59 | 26 ℃ | 75 ％|指数  26  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-05-19 17:14 | 29 ℃ | 71 ％|指数  28  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-19 17:29 | 30 ℃ | 68 ％|指数  28  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-19 17:44 | 30 ℃ | 66 ％|指数  29  <font color= orange >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-05-19 19:14 | 33 ℃ | 59 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-19 19:29 | 33 ℃ | 60 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-19 19:44 | 27 ℃ | 64 ％|指数  25  <font color= yellow >■■■</font></font><br>
+  <font size=+1> 2020-05-19 19:59 | 25 ℃ | 70 ％|指数  23  <font color= green >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
