--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-05-19 20:29 | 24 ℃ | 73 ％|指数  24  <font color= green >■■■</font></font><br>
   <font size=+1> 2020-05-19 20:44 | 24 ℃ | 75 ％|指数  24  <font color= green >■■■</font></font><br>
   <font size=+1> 2020-05-19 20:59 | 24 ℃ | 74 ％|指数  24  <font color= green >■■■</font></font><br>
   <font size=+1> 2020-05-19 21:14 | 24 ℃ | 76 ％|指数  24  <font color= green >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-05-19 22:34 | 27 ℃ | 83 ％|指数  28  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-19 22:49 | 27 ℃ | 83 ％|指数  28  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-19 23:04 | 28 ℃ | 76 ％|指数  28  <font color= orange >■■■</font></font><br>
+  <font size=+1> 2020-05-19 23:19 | 29 ℃ | 74 ％|指数  28  <font color= orange >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
