--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-05-19 23:19 | 29 ℃ | 74 ％|指数  28  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-19 23:34 | 28 ℃ | 73 ％|指数  28  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-05-19 23:49 | 28 ℃ | 73 ％|指数  27  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-05-20 00:04 | 27 ℃ | 74 ％|指数  27  <font color= yellow >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-05-20 01:34 | 28 ℃ | 71 ％|指数  27  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-05-20 01:49 | 28 ℃ | 71 ％|指数  27  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-05-20 02:04 | 27 ℃ | 72 ％|指数  27  <font color= yellow >■■■</font></font><br>
+  <font size=+1> 2020-05-20 02:19 | 28 ℃ | 71 ％|指数  27  <font color= yellow >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
