--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-05-20 16:13 | 32 ℃ | 43 ％|指数  27  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-05-20 16:28 | 32 ℃ | 44 ％|指数  27  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-05-20 16:43 | 32 ℃ | 44 ％|指数  26  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-05-20 16:58 | 31 ℃ | 45 ％|指数  26  <font color= yellow >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-05-20 18:28 | 29 ℃ | 47 ％|指数  25  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-05-20 18:43 | 29 ℃ | 48 ％|指数  25  <font color= green >■■■</font></font><br>
   <font size=+1> 2020-05-20 18:58 | 28 ℃ | 49 ％|指数  24  <font color= green >■■■</font></font><br>
+  <font size=+1> 2020-05-20 19:13 | 28 ℃ | 50 ％|指数  24  <font color= green >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
