--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-05-22 07:24 | 23 ℃ | 72 ％|指数  23  <font color= green >■■■</font></font><br>
   <font size=+1> 2020-05-22 07:39 | 24 ℃ | 72 ％|指数  23  <font color= green >■■■</font></font><br>
   <font size=+1> 2020-05-22 07:54 | 24 ℃ | 75 ％|指数  24  <font color= green >■■■</font></font><br>
   <font size=+1> 2020-05-22 08:09 | 24 ℃ | 80 ％|指数  24  <font color= green >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-05-22 13:48 | 24 ℃ | 93 ％|指数  26  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-05-22 14:03 | 24 ℃ | 94 ％|指数  26  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-05-22 14:18 | 25 ℃ | 92 ％|指数  28  <font color= yellow >■■■</font></font><br>
+  <font size=+1> 2020-05-22 14:33 | 26 ℃ | 91 ％|指数  28  <font color= orange >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
