--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-05-25 07:43 | 28 ℃ | 89 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-25 07:58 | 29 ℃ | 87 ％|指数  31  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-25 08:13 | 29 ℃ | 85 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-25 08:28 | 29 ℃ | 84 ％|指数  30  <font color= orange >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-05-25 09:58 | 32 ℃ | 75 ％|指数  31  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-05-25 10:13 | 32 ℃ | 75 ％|指数  31  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-05-25 10:28 | 32 ℃ | 75 ％|指数  31  <font color= red >■■■</font></font><br>
+  <font size=+1> 2020-05-25 10:43 | 32 ℃ | 74 ％|指数  32  <font color= red >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
