--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-05-25 12:43 | 33 ℃ | 70 ％|指数  31  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-05-25 12:58 | 33 ℃ | 70 ％|指数  31  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-05-25 13:13 | 33 ℃ | 70 ％|指数  32  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-05-25 13:28 | 33 ℃ | 68 ％|指数  31  <font color= red >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-05-25 14:58 | 32 ℃ | 71 ％|指数  31  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-05-25 15:13 | 32 ℃ | 71 ％|指数  31  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-25 15:28 | 31 ℃ | 72 ％|指数  31  <font color= orange >■■■</font></font><br>
+  <font size=+1> 2020-05-25 15:43 | 31 ℃ | 73 ％|指数  31  <font color= orange >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
