--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-05-25 17:58 | 29 ℃ | 75 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-25 18:13 | 30 ℃ | 73 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-25 18:28 | 29 ℃ | 73 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-25 18:43 | 29 ℃ | 73 ％|指数  29  <font color= orange >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-05-25 20:13 | 28 ℃ | 73 ％|指数  28  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-05-25 20:28 | 28 ℃ | 74 ％|指数  28  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-05-25 20:43 | 28 ℃ | 74 ％|指数  28  <font color= yellow >■■■</font></font><br>
+  <font size=+1> 2020-05-25 20:58 | 28 ℃ | 73 ％|指数  27  <font color= yellow >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
