--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-05-25 18:58 | 29 ℃ | 74 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-25 19:13 | 29 ℃ | 73 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-25 19:28 | 29 ℃ | 74 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-25 19:43 | 29 ℃ | 73 ％|指数  28  <font color= orange >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-05-25 21:13 | 28 ℃ | 74 ％|指数  27  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-05-25 21:28 | 28 ℃ | 74 ％|指数  27  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-05-25 21:43 | 27 ℃ | 74 ％|指数  27  <font color= yellow >■■■</font></font><br>
+  <font size=+1> 2020-05-25 21:58 | 27 ℃ | 74 ％|指数  27  <font color= yellow >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
