--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-05-26 01:28 | 26 ℃ | 75 ％|指数  26  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-05-26 01:43 | 26 ℃ | 75 ％|指数  26  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-05-26 01:58 | 26 ℃ | 75 ％|指数  25  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-05-26 07:49 | 26 ℃ | 87 ％|指数  28  <font color= yellow >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-05-26 09:19 | 32 ℃ | 74 ％|指数  31  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-05-26 09:34 | 31 ℃ | 74 ％|指数  31  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-26 09:49 | 32 ℃ | 74 ％|指数  31  <font color= orange >■■■</font></font><br>
+  <font size=+1> 2020-05-26 10:04 | 32 ℃ | 73 ％|指数  31  <font color= red >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
