--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-05-26 08:34 | 30 ℃ | 81 ％|指数  31  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-26 08:49 | 30 ℃ | 78 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-26 09:04 | 31 ℃ | 75 ％|指数  31  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-26 09:19 | 32 ℃ | 74 ％|指数  31  <font color= red >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-05-26 10:49 | 33 ℃ | 70 ％|指数  31  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-05-26 11:04 | 33 ℃ | 70 ％|指数  31  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-05-26 11:19 | 33 ℃ | 69 ％|指数  31  <font color= red >■■■</font></font><br>
+  <font size=+1> 2020-05-26 11:34 | 33 ℃ | 70 ％|指数  31  <font color= red >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
