--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-05-26 16:19 | 34 ℃ | 66 ％|指数  32  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-05-26 16:34 | 34 ℃ | 67 ％|指数  32  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-05-26 16:49 | 33 ℃ | 67 ％|指数  32  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-05-26 17:04 | 33 ℃ | 67 ％|指数  32  <font color= red >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-05-26 18:34 | 33 ℃ | 66 ％|指数  32  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-05-26 18:49 | 33 ℃ | 66 ％|指数  31  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-05-26 19:04 | 32 ℃ | 66 ％|指数  31  <font color= orange >■■■</font></font><br>
+  <font size=+1> 2020-05-26 19:19 | 32 ℃ | 67 ％|指数  30  <font color= orange >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
