--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-05-26 19:34 | 31 ℃ | 67 ％|指数  30  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-26 19:49 | 31 ℃ | 67 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-26 20:04 | 30 ℃ | 67 ％|指数  29  <font color= orange >■■■</font></font><br>
   <font size=+1> 2020-05-26 20:18 | 30 ℃ | 68 ％|指数  29  <font color= orange >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-05-26 21:48 | 29 ℃ | 69 ％|指数  27  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-05-26 22:03 | 29 ℃ | 69 ％|指数  27  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-05-26 22:18 | 29 ℃ | 69 ％|指数  27  <font color= yellow >■■■</font></font><br>
+  <font size=+1> 2020-05-26 22:33 | 29 ℃ | 69 ％|指数  27  <font color= yellow >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
