--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <input type = "button" value ="再読込" style="width:120px;height:50px;font-size:24px;background:blue;color:white" onclick="location.reload();">
 </h2>
   <font size = +2>場内温度、湿度　熱中症に注意</font><br>
-  <font size=+1> 2020-05-26 22:18 | 29 ℃ | 69 ％|指数  27  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-05-26 22:33 | 29 ℃ | 69 ％|指数  27  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-05-26 22:48 | 28 ℃ | 69 ％|指数  27  <font color= yellow >■■■</font></font><br>
   <font size=+1> 2020-05-26 23:03 | 28 ℃ | 70 ％|指数  27  <font color= yellow >■■■</font></font><br>
@@ -24,6 +23,7 @@
   <font size=+1> 2020-05-27 09:19 | 30 ℃ | 84 ％|指数  31  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-05-27 09:34 | 30 ℃ | 85 ％|指数  31  <font color= red >■■■</font></font><br>
   <font size=+1> 2020-05-27 09:49 | 31 ℃ | 86 ％|指数  33  <font color= red >■■■</font></font><br>
+  <font size=+1> 2020-05-27 10:04 | 31 ℃ | 86 ％|指数  33  <font color= red >■■■</font></font><br>
   <b>凡例　　</b><br> 
   <font color = green>■■■</font> 快適　
   <font color = yellow>■■■</font> 注意　
